cmake_minimum_required(VERSION 3.23)
project(question CXX)

set(CMAKE_CXX_STANDARD 11)


add_executable(work work.c++)
add_executable(temp temp.cpp)
add_executable(max max.cpp)
add_executable(student student.cpp)
add_executable(out out.cpp)
add_executable(Factor Factor.cpp)
add_executable(primeNumber primeNumber.cpp)
add_executable(primitName primitName.cpp)
add_executable(book book.cpp)
add_executable(Conversion Conversion.cpp)
add_executable(Circle Circle.cpp)
add_executable(Rectangle Rectangle.cpp)
add_executable(Ex Ex.cpp)